# OOP

./: CMakeLists.txt
set/: array.h  iterators.h  set.h
src/: circle.h  position.cpp  position.h  shape.cpp  shape.h
